nullaway_error_f89619bf-8bb4-4fca-b6d4-af108eba9ee2.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/environment/MapObjectLoader.java:96: error: [NullAway] dereferenced expression mapObject.getType() is @Nullable
    if (!mapObject.getType().equalsIgnoreCase(this.getMapObjectType())) {
                            ^
    (see http://t.uber.com/nullaway )
